--- a/MyBlog.App/Views/Shared/_Layout.cshtml
+++ b/MyBlog.App/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer bg-body text-muted">
         <div class="container">
             &copy; 2023 - MyBlog - <a class="text-decoration-none" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
