--- a/MyBlog.App/Views/Tag/GetTag.cshtml
+++ b/MyBlog.App/Views/Tag/GetTag.cshtml
@@ -3,57 +3,17 @@
     ViewData["Title"] = "Список тегов";
 }
 
-<style>
-    table {
-        border: 2px solid gray;
-    }
+<h3 class="mt-5">Все теги</h3>
+<a asp-action="Create" asp-controller="Tag" class="mb-3 text-decoration-none">Добавить тег</a>
 
-    th {
-        border: 2px solid gray;
-        padding: 3px;
-        background-color: cornflowerblue;
+<div class="row justify-content-evenly">
+    @foreach (var tag in Model.Tags)
+    {
+        <div class="card m-3 col-8 col-sm-4 col-md-3 col-lg-2">
+            <div class="card-body p-1 mb-0">
+                <a class="mb-0 link-primary text-decoration-none" href="#">@tag.Name</a>
+                <p class="mb-0 form-text font-m75 text-end">@($"Статей по тегу: {@tag.Posts.Count}")</p>
+            </div>
+        </div>
     }
-
-    td {
-        border: 2px solid gray;
-        padding: 3px;
-    }
-</style>
-
-<div>
-    <table>
-        <tr>
-            <th>ID</th>
-            <th>Имя тега</th>
-            <th>Список статей</th>
-            <th></th>
-            <th></th>
-        </tr>
-        @foreach(var tag in Model.Tags)
-        {
-            <tr>
-                <td>@tag.Id</td>
-                <td>@tag.Name</td>
-                <td>
-                    <details>
-                        <summary>Раскрыть</summary>
-                        @if(tag.Posts != null)
-                            @string.Join(", ", @tag.Posts.Select(p => p.Title))
-                        else
-                            @string.Empty
-                    </details>
-                </td>
-                <td>
-                    <form method="post" asp-controller="Tag" asp-action="Remove" asp-route-id="@tag.Id">
-                        <button type="submit">Удалить</button>
-                    </form>
-                </td>
-                <td>
-                    <form method="get" asp-controller="Tag" asp-action="Edit" asp-route-id="@tag.Id">
-                        <button type="submit">Редактировать</button>
-                    </form>
-                </td>
-            </tr>
-        }
-    </table>
 </div>
