Страница отображения всех ролей

--- a/MyBlog.App/Views/Role/GetRole.cshtml
+++ b/MyBlog.App/Views/Role/GetRole.cshtml
@@ -3,14 +3,19 @@
     ViewData["Title"] = "Роли";
 }
 
-<h3>Роли</h3>
-<div>
-    @foreach(var role in Model.Roles)
+<h3 class="mt-5">Все роли</h3>
+<a asp-action="Create" asp-controller="Role" class="mb-3 text-decoration-none">Добавить роль</a>
+
+<div class="row justify-content-center">
+    @foreach (var role in Model.Roles)
     {
-        <p>@(role.Id) - @(role.Name)</p>
-        <a asp-action="Edit" asp-controller="Role" asp-route-id="@role.Id">Изменить</a>
-        <form method="post" asp-action="Delete" asp-controller="Role" asp-route-id="@role.Id">
-            <button type="submit" class="btn btn-dark">Удалить</button>
-        </form>
+        <div class="card m-3 col-8 col-sm-5 col-md-4 col-lg-3">
+            <div class="card-body">
+                <a class="fs-5 link-primary text-decoration-none" asp-action="Edit" asp-controller="Role" asp-route-id="@role.Id">
+                    @role.Name
+                </a>
+                <p class="mt-2 mb-0 form-text">@role.Description</p>
+            </div>
+        </div>
     }
 </div>
