--- a/MyBlog.App/Views/Post/Create.cshtml
+++ b/MyBlog.App/Views/Post/Create.cshtml
@@ -56,6 +56,6 @@
         </div>
 
         <button type="submit" class="btn btn-primary mb-2">Добавить</button>
-        <p class="form-text"><a asp-action="GetPost" asp-controller="Post" class="text-decoration-none">Перейти к списку всех статей</a></p>
+        <p class="form-text"><a asp-action="GetPosts" asp-controller="Post" class="text-decoration-none">Перейти к списку всех статей</a></p>
     </form>
 </div>
