--- a/MyBlog.App/Views/Role/Create.cshtml
+++ b/MyBlog.App/Views/Role/Create.cshtml
@@ -33,7 +33,7 @@
         </div>
 
         <button type="submit" class="btn btn-primary mb-2">Добавить</button>
-        <p class="form-text"><a asp-action="GetRole" asp-controller="Role" class="text-decoration-none">Перейти к списку всех ролей</a></p>
+        <p class="form-text"><a asp-action="GetRoles" asp-controller="Role" class="text-decoration-none">Перейти к списку всех ролей</a></p>
     </form>
 </div>
 
