--- a/MyBlog.App/Views/Tag/Edit.cshtml
+++ b/MyBlog.App/Views/Tag/Edit.cshtml
@@ -24,6 +24,6 @@
         </div>
 
         <button type="submit" class="btn btn-primary mb-2">Сохранить</button>
-        <p class="form-text"><a asp-action="GetTag" asp-controller="Tag" class="text-decoration-none">Перейти к списку всех тегов</a></p>
+        <p class="form-text"><a asp-action="GetTags" asp-controller="Tag" class="text-decoration-none">Перейти к списку всех тегов</a></p>
     </form>
 </div>
