--- a/MyBlog.App/Views/Shared/_Navbar.cshtml
+++ b/MyBlog.App/Views/Shared/_Navbar.cshtml
@@ -6,18 +6,21 @@
 {
     <ul class="navbar-nav flex-grow-1">
         <li class="nav-item">
-            <a class="nav-link" asp-action="GetTag" asp-controller="Tag">Теги</a>
+            <a class="nav-link" asp-action="GetTags" asp-controller="Tag">Теги</a>
         </li>
-        <li class="nav-item">
-            <a class="nav-link" asp-action="GetComment" asp-controller="Comment">Комментарии</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" asp-action="GetUser" asp-controller="User">Пользователи</a>
-        </li>
+        @if(User.IsInRole("Admin") || User.IsInRole("Moderator"))
+        {
+            <li class="nav-item">
+                <a class="nav-link" asp-action="GetComments" asp-controller="Comment">Комментарии</a>
+            </li>
+        }
         @if (User.IsInRole("Admin"))
         {
             <li class="nav-item">
-                <a class="nav-link" asp-action="GetRole" asp-controller="Role">Роли</a>
+                <a class="nav-link" asp-action="GetUsers" asp-controller="User">Пользователи</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" asp-action="GetRoles" asp-controller="Role">Роли</a>
             </li>
         }
     </ul>
@@ -37,7 +40,9 @@
                 </li>
                 <li>
                     <a class="dropdown-item" href="#" onclick="document.getElementById('logout').submit()">Выход</a>
-                    <form id="logout" method="post" asp-controller="User" asp-action="Logout" asp-route-returnUrl="@(Context.Request.Path + Context.Request.QueryString)"></form>
+                    <form id="logout" method="post" asp-controller="User" asp-action="Logout" 
+                        asp-route-returnUrl="@(Context.Request.Path + Context.Request.QueryString)"
+                        asp-route-userId="@User.Claims.FirstOrDefault(c => c.Type == "UserID")?.Value"></form>
                 </li>
             </ul>
         </li>
