--- a/MyBlog.App/Views/User/Register.cshtml
+++ b/MyBlog.App/Views/User/Register.cshtml
@@ -7,7 +7,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.js"></script>
 
-<div class="max-width-550 m-auto">
+<div class="max-width-550 m-auto mb-5">
     <form class="mt-5" method="post" asp-controller="User" asp-action="Register">
         <h3>Регистрация пользователя</h3>
         <hr  class="hr"/>
