--- a/MyBlog.App/Views/Post/Create.cshtml
+++ b/MyBlog.App/Views/Post/Create.cshtml
@@ -7,50 +7,48 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.1/jquery.validate.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.js"></script>
 
-<div class="max-width-600 m-auto">
-    <form class="mt-5" method="post" asp-controller="Post" asp-action="Create">
-        <h3>Добавление статьи</h3>
-        <hr class="hr" />
+<div class="m-auto mt-5">
+    <h3>Добавление статьи</h3>
+    <hr class="hr" />
+    <form method="post" asp-controller="Post" asp-action="Create">
         <div asp-validation-summary="ModelOnly" class="text-danger fs-6"></div>
 
-        <input type="hidden" asp-for="UserId" value="@User.Claims.FirstOrDefault(c => c.Type == "UserID")?.Value"/>
-        <input type="hidden" id="post-tags" asp-for="PostTags" />
+        <div class="max-width-600">
+            <input type="hidden" asp-for="UserId" value="@User.Claims.FirstOrDefault(c => c.Type == "UserID")?.Value" />
+            <input type="hidden" id="post-tags" asp-for="PostTags" />
 
-        <h5 class="text-muted ms-2">Теги</h5>
-        <div class="form-text mb-1" id="add-tags">Здесь вы увидите добавленные теги</div>
-        <div class="input-group">
-            <input class="form-control form-control-sm shadow-none input-primary-board" id="filter-input" placeholder="Поиск тега" oninput="filter()" />
-            <button type="button" class="btn btn-outline-primary btn-sm shadow-none" onclick="addTag()">Добавить</button>
+            <h5 class="text-muted ms-2">Теги</h5>
+            <div class="form-text mb-1" id="add-tags">Здесь вы увидите добавленные теги</div>
+            <div class="input-group">
+                <input class="form-control form-control-sm shadow-none input-primary-board" id="filter-input" placeholder="Поиск тега" oninput="filter()" />
+                <button type="button" class="btn btn-outline-primary btn-sm shadow-none" onclick="addTag()">Добавить</button>
+            </div>
+
+            <div class="form-group">
+                <select class="form-select form-select-sm shadow-none input-primary-board" id="tags" size="4">
+                    @foreach (var tag in Model.AllTags)
+                    {
+                        <option value="@tag.Id">@tag.Name</option>
+                    }
+                </select>
+            </div>
+            <p class="form-text">Если вы не нашли нужный тег, <a asp-action="Create" asp-controller="Tag" class="text-decoration-none">создайте его</a></p>
         </div>
 
-        <div class="form-group">
-            <select class="form-select form-select-sm shadow-none input-primary-board" id="tags" size="4">
-                @foreach (var tag in Model.AllTags)
-                {
-                    <option value="@tag.Id">@tag.Name</option>
-                }
-            </select>
-        </div>
-        <p class="form-text">Если вы не нашли нужный тег, <a asp-action="Create" asp-controller="Tag" class="text-decoration-none">создайте его</a></p>
         <hr class="hr" />
-
         <h5 class="text-muted ms-2">Статья</h5>
         <div class="form-group mb-4 position-relative">
             <div class="row">
-                <label asp-for="Title" class="form-label col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                    <input asp-for="Title" class="form-control" />
-                </div>
+                <label asp-for="Title" class="form-label"></label>
+                <input asp-for="Title" class="form-control" />
             </div>
             <span asp-validation-for="Title" class="text-danger error-message"></span>
         </div>
 
         <div class="form-group mb-4 position-relative">
             <div class="row">
-                <label asp-for="Content" class="form-label col-sm-2 col-form-label"></label>
-                <div class="col-sm-10">
-                    <textarea asp-for="Content" class="form-control textarea" rows="4"></textarea>
-                </div>
+                <label asp-for="Content" class="form-label"></label>
+                <textarea asp-for="Content" class="form-control" rows="15"></textarea>
             </div>
             <span asp-validation-for="Content" class="text-danger error-message"></span>
         </div>
