--- a/MyBlog.App/Views/Post/GetPosts.cshtml
+++ b/MyBlog.App/Views/Post/GetPosts.cshtml
@@ -6,7 +6,7 @@
 
     string labelClasses = checkRole
         ? "col-sm-4 mb-0 font-m75 form-text text-end"
-        : "col-12 mb-0 font-m75 form-text text-end";
+        : "col mb-0 font-m75 form-text text-end";
 }
 
 <h3 class="mt-5">Все статьи</h3>
@@ -17,7 +17,10 @@
     {
         <div class="card m-3 col-10">
             <div class="card-body">
-                <a class="fs-5 mb-0 link-primary text-decoration-none" href="#">@post.Title</a>
+                <a class="fs-5 mb-0 link-primary text-decoration-none" asp-action="View" 
+                    asp-controller="Post" asp-route-id="@post.Id">
+                    @post.Title
+                </a>
                 <div class="mb-4">
                     @foreach (var tag in post.Tags)
                     {
