--- a/MyBlog.App/wwwroot/css/site.css
+++ b/MyBlog.App/wwwroot/css/site.css
@@ -54,6 +54,10 @@ body {
     margin-left: 4%;
 }
 
+.pos-bottom{
+    bottom: 20px;
+    right: 20px;
+}
 
 .max-width-350 {
     max-width: 350px;
@@ -66,6 +70,9 @@ body {
 }
 .max-width-600 {
     max-width: 600px;
+}
+.max-width-800 {
+    max-width: 800px;
 }
 
 .error-message {
