--- a/MyBlog.App/Views/User/Edit.cshtml
+++ b/MyBlog.App/Views/User/Edit.cshtml
@@ -22,8 +22,12 @@
                 {
                     <div class="col-md-3 col-sm-4">
                         <div class="form-check">
+                            @if(role.Key == "User")
+                            {
+                                <input type="hidden" name="User" value="on" />
+                            }
                             <input class="form-check-input" type="checkbox" id="@role.Key" @(role.Key == "User" ? "disabled" : "")
-                                   name="@($"role{@role.Key}")" @(role.Value ? "checked" : "") />
+                                   name="@(role.Key != "User" ? $"{@role.Key}" : "")" @(role.Value ? "checked" : "") />
                             <label class="from-check-label @(role.Key == "User" ? "text-secondary" : "")" for="@role.Key">
                                 @role.Key
                             </label>
