--- a/MyBlog.App/Views/Role/GetRoles.cshtml
+++ b/MyBlog.App/Views/Role/GetRoles.cshtml
@@ -11,7 +11,7 @@
     {
         <div class="card m-3 col-8 col-sm-5 col-md-4 col-lg-3">
             <div class="card-body">
-                <a class="fs-5 link-primary text-decoration-none" asp-action="Edit" asp-controller="Role" asp-route-id="@role.Id">
+                <a class="fs-5 link-primary text-decoration-none" asp-action="View" asp-controller="Role" asp-route-id="@role.Id">
                     @role.Name
                 </a>
                 <p class="mt-2 mb-0 form-text">@role.Description</p>
