--- a/MyBlog.App/Views/Shared/_Navbar.cshtml
+++ b/MyBlog.App/Views/Shared/_Navbar.cshtml
@@ -51,13 +51,13 @@
 else
 {
     <ul class="navbar-nav flex-grow-1 justify-content-end">
-        @if(Context.Request.Path != "/Register")
+        @if (!Context.Request.Path.StartsWithSegments("/Register"))
         {
             <li class="nav-item">
                 <a class="nav-link" asp-controller="User" asp-action="Register">Регистрация</a>
             </li>
         }
-        @if(Context.Request.Path != "/Login")
+        @if (!Context.Request.Path.StartsWithSegments("/Login"))
         {
             <li class="nav-item">
                 <a class="nav-link" asp-controller="User" asp-action="Login">Войти</a>
