--- a/MyBlog.App/Views/Tag/GetTags.cshtml
+++ b/MyBlog.App/Views/Tag/GetTags.cshtml
@@ -1,17 +1,33 @@
 ﻿@model MyBlog.App.ViewModels.Tags.TagsViewModel
 @{
     ViewData["Title"] = "Список тегов";
+    var check = User.IsInRole("Admin") || User.IsInRole("Moderator");
 }
 
 <h3 class="mt-5">Все теги</h3>
-<a asp-action="Create" asp-controller="Tag" class="mb-3 text-decoration-none">Добавить тег</a>
+@if (check)
+{
+    <a asp-action="Create" asp-controller="Tag" class="text-decoration-none">Добавить тег</a>
+}
 
-<div class="row justify-content-evenly">
+<div class="row mt-3 justify-content-evenly">
     @foreach (var tag in Model.Tags)
     {
         <div class="card m-3 col-8 col-sm-4 col-md-3 col-lg-2">
             <div class="card-body p-1 mb-0">
-                <a class="mb-0 link-primary text-decoration-none" href="#">@tag.Name</a>
+                @if(check){
+                    <a class="mb-0 link-primary text-decoration-none" asp-action="View" asp-controller="Tag" 
+                        asp-route-id="@tag.Id">
+                             @tag.Name
+                        </a>
+                }
+                else
+                {
+                    <a class="mb-0 link-primary text-decoration-none" asp-action="GetPosts" asp-controller="Post" 
+                        asp-route-tagId="@tag.Id">
+                             @tag.Name
+                        </a>
+                }
                 <p class="mb-0 form-text font-m75 text-end">@($"Статей по тегу: {@tag.Posts.Count}")</p>
             </div>
         </div>
