--- a/MyBlog.App/Views/User/View.cshtml
+++ b/MyBlog.App/Views/User/View.cshtml
@@ -1,6 +1,9 @@
 ﻿@model MyBlog.App.ViewModels.Users.UserViewModel;
 @{
     ViewData["Title"] = "Пользователь";
+
+    var climeUserId = @User.Claims.FirstOrDefault(c => c.Type == "UserID")?.Value;
+    var check = User.IsInRole("Admin") || User.IsInRole("Moderator");
 }
 
 <div class="m-auto max-width-800">
@@ -24,26 +27,32 @@
                     </p>
                     <div>
                         <a class="m-3 text-decoration-none" asp-action="GetPosts" asp-controller="Post" asp-route-userId="@Model.Id">Статьи</a>
+                        @if(check)
+                        {
+                            <a class="m-3 text-decoration-none" asp-action="GetComments" asp-controller="Comment" asp-route-userId="@Model.Id">Коментарии</a>   
+                        }
                         @if (User.IsInRole("Admin"))
                         {
-                            <a class="m-3 text-decoration-none" asp-action="GetComments" asp-controller="Comment" asp-route-userId="@Model.Id">Коментарии</a>
                             <a class="m-3 text-decoration-none" asp-action="GetRoles" asp-controller="Role" asp-route-userId="@Model.Id">Роли</a>
                         }
                     </div>
                     <div class="row pt-5">
-                        <div class="col mt-4 mb-2 justify-content-end">
-                            <a class="btn btn-outline-primary" asp-action="Edit" asp-controller="User" asp-route-id="@Model.Id">
-                                Редактировать
-                            </a>
-                        </div>
-                        <div class="col mt-4 d-flex justify-content-sm-end justify-content-start">
-                            <form method="post" asp-action="Remove" asp-controller="User">
-                                <input type="hidden" name="id" value="@Model.Id" />
-                                <input type="hidden" name="userId" value="@User.Claims.FirstOrDefault(c => c.Type == "UserID")?.Value" />
+                        @if(User.IsInRole("Admin") || (check && Model.Id.ToString() == climeUserId))
+                        {
+                            <div class="col mt-4 mb-2 justify-content-end">
+                                <a class="btn btn-outline-primary" asp-action="Edit" asp-controller="User" asp-route-id="@Model.Id">
+                                    Редактировать
+                                </a>
+                            </div>
+                            <div class="col mt-4 d-flex justify-content-sm-end justify-content-start">
+                                <form method="post" asp-action="Remove" asp-controller="User">
+                                    <input type="hidden" name="id" value="@Model.Id" />
+                                    <input type="hidden" name="userId" value="@climeUserId" />
 
-                                <button type="submit" class="btn btn-outline-danger">Удалить</button>
-                            </form>
-                        </div>
+                                    <button type="submit" class="btn btn-outline-danger">Удалить</button>
+                                </form>
+                            </div>
+                        }
                     </div>
                 </div>
             </div>
