Изменена структура папки ViewModel проекта MyBlog.App

--- a/MyBlog.App/Views/Comment/Edit.cshtml
+++ b/MyBlog.App/Views/Comment/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Comments.CommentEditViewModel
+﻿@model MyBlog.App.ViewModels.Comments.Response.CommentEditViewModel
 @{
     ViewData["Title"] = "Редактирование комментария";
 }
