--- a/MyBlog.App/Views/Comment/GetComments.cshtml
+++ b/MyBlog.App/Views/Comment/GetComments.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Comments.CommentsViewModel
+﻿@model MyBlog.App.ViewModels.Comments.Request.CommentsViewModel
 @{
     ViewData["Title"] = "Список комментариев";
     var checkRole = User.IsInRole("Admin") || User.IsInRole("Moderator");
