--- a/MyBlog.App/Views/Post/View.cshtml
+++ b/MyBlog.App/Views/Post/View.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Posts.PostViewModel
+﻿@model MyBlog.App.ViewModels.Posts.Request.PostViewModel
 @{
     ViewData["Title"] = "Статья";
 
