--- a/MyBlog.App/Views/Role/Create.cshtml
+++ b/MyBlog.App/Views/Role/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Roles.RoleCreateViewModel
+﻿@model MyBlog.App.ViewModels.Roles.Response.RoleCreateViewModel
 @{
     ViewData["Title"] = "Создание роли";
 }
