--- a/MyBlog.App/Views/Role/Edit.cshtml
+++ b/MyBlog.App/Views/Role/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Roles.RoleEditViewModel
+﻿@model MyBlog.App.ViewModels.Roles.Response.RoleEditViewModel
 @{
     ViewData["Title"] = "Редактирование роли";
 }
