--- a/MyBlog.App/Views/Role/GetRoles.cshtml
+++ b/MyBlog.App/Views/Role/GetRoles.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Roles.RolesViewModel
+﻿@model MyBlog.App.ViewModels.Roles.Request.RolesViewModel
 @{
     ViewData["Title"] = "Роли";
 }
