--- a/MyBlog.App/Views/Role/View.cshtml
+++ b/MyBlog.App/Views/Role/View.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Roles.RoleViewModel
+﻿@model MyBlog.App.ViewModels.Roles.Request.RoleViewModel
 @{
     ViewData["Title"] = "Роль";
 }
