--- a/MyBlog.App/Views/Tag/Create.cshtml
+++ b/MyBlog.App/Views/Tag/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Tags.TagCreateViewModel
+﻿@model MyBlog.App.ViewModels.Tags.Response.TagCreateViewModel
 @{
     ViewData["Title"] = "Создание тега";
 }
