--- a/MyBlog.App/Views/Tag/View.cshtml
+++ b/MyBlog.App/Views/Tag/View.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Tags.TagViewModel
+﻿@model MyBlog.App.ViewModels.Tags.Request.TagViewModel
 @{
     ViewData["Title"] = "Роль";
 }
