--- a/MyBlog.App/Views/User/GetUsers.cshtml
+++ b/MyBlog.App/Views/User/GetUsers.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Users.UsersViewModel
+﻿@model MyBlog.App.ViewModels.Users.Request.UsersViewModel
 @{
     ViewData["Title"] = "Пользователи";
 }
