--- a/MyBlog.App/Views/User/Login.cshtml
+++ b/MyBlog.App/Views/User/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Users.UserLoginViewModel
+﻿@model MyBlog.App.ViewModels.Users.Response.UserLoginViewModel
 @{
     ViewData["Title"] = "Авторизация"; 
 }
