--- a/MyBlog.App/Views/User/Register.cshtml
+++ b/MyBlog.App/Views/User/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Users.UserRegisterViewModel
+﻿@model MyBlog.App.ViewModels.Users.Response.UserRegisterViewModel
 @{
     ViewData["Title"] = "Регистрация"; 
 }
