--- a/MyBlog.App/Views/User/View.cshtml
+++ b/MyBlog.App/Views/User/View.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Users.UserViewModel;
+﻿@model MyBlog.App.ViewModels.Users.Request.UserViewModel;
 @{
     ViewData["Title"] = "Пользователь";
 
