--- a/MyBlog.App/Views/Home/Privacy.cshtml
+++ b/MyBlog.App/Views/Home/Privacy.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
+<h3 class="mt-5">@ViewData["Title"]</h3>
 
 <p>Use this page to detail your site's privacy policy.</p>
