--- a/MyBlog.App/Views/Post/Edit.cshtml
+++ b/MyBlog.App/Views/Post/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Posts.PostEditViewModel
+﻿@model MyBlog.App.ViewModels.Posts.Response.PostEditViewModel
 @{
     ViewData["Title"] = "Редактирование статьи";
 }
