--- a/MyBlog.App/Views/Tag/Edit.cshtml
+++ b/MyBlog.App/Views/Tag/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Tags.TagEditViewModel
+﻿@model MyBlog.App.ViewModels.Tags.Response.TagEditViewModel
 @{
     ViewData["Title"] = "Редактирование тега";
 }
