--- a/MyBlog.App/Views/User/Edit.cshtml
+++ b/MyBlog.App/Views/User/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model MyBlog.App.ViewModels.Users.UserEditViewModel
+﻿@model MyBlog.App.ViewModels.Users.Response.UserEditViewModel
 @{
     ViewData["Title"] = "Редактирование пользователя";
 }
